升级相关依赖到最新版本